Fix the long name spilling over two lines

--- a/css/home.scss
+++ b/css/home.scss
@@ -18,6 +18,7 @@ body {
 }
 
 h1 {
+  font-size: 1.8em; 
   font-weight: 900;
   letter-spacing: 0.2em;
 }
